# voxray

./: Cargo.toml  LICENSE  README.md  deny.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
src/: lib.rs
tests/: odd.rs
