[package]
name = "voxray"
version = "0.0.1"
authors = ["Dacian Herbei <dacian.herbei.public@gmail.com>"]
edition = "2018"
description = "Voxel based ray tracing"
license = "MIT"
repository = "https://github.com/dacianherbei/voxray"
readme = "./README.md"
keywords = ["rust", "voxel", "raytracing", "lib"]
categories = ["rendering"]

[dependencies]
is-odd = "1.0"
